--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,22 @@
 Package: myTAI
 Type: Package
-Title: A framework to perform phylotranscriptomics analyses for
-        Evolutionary Developmental Biology research
-Version: 0.0.1
-Date: 2014-10-25
+Title: A Framework to Perform Phylotranscriptomics Analyses for
+        Evolutionary Developmental Biology Research
+Version: 0.0.2
+Date: 2014-12-27
 Author: Hajk-Georg Drost
 Maintainer: Hajk-Georg Drost <hajk-georg.drost@informatik.uni-halle.de>
-Description: The present collection of functions can be used to perform
-    phylotranscriptomics analyses to investigate phenomena
-    within the field of Evolutionary Developmental Biology
+Description: A statistical framework to combine evolutionary information with transcriptome data to detect evolutionary signals and conserved stages in biological processes
 License: GPL-3
 VignetteBuilder: knitr
 NeedsCompilation: yes
 Depends: R (>= 3.1.1)
 Imports: Rcpp (>= 0.11.3), nortest (>= 1.0-2), fitdistrplus (>= 1.0-2),
-        parallel (>= 3.1.1), foreach (>= 1.4.2), iterators (>= 1.0.7)
+        parallel (>= 3.1.1), foreach (>= 1.4.2), doParallel (>= 1.0.8),
+        dplyr (>= 0.3.0)
 Suggests: knitr (>= 1.6), rmarkdown (>= 0.3.3), devtools (>= 1.6.1)
 LinkingTo: Rcpp
-Packaged: 2014-11-01 18:47:49 UTC; Hajk
+URL: https://github.com/HajkD/myTAI
+Packaged: 2014-12-27 20:05:01 UTC; Hajk
 Repository: CRAN
-Date/Publication: 2014-11-01 23:53:07
+Date/Publication: 2014-12-27 23:40:03
