--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,23 @@
 Package: myTAI
 Type: Package
-Title: A Framework to Perform Phylotranscriptomics Analyses for
-        Evolutionary Developmental Biology Research
-Version: 0.0.2
-Date: 2014-12-27
+Title: Performing Phylotranscriptomics with R
+Version: 0.1.0
+Date: 2015-05-24
 Author: Hajk-Georg Drost
 Maintainer: Hajk-Georg Drost <hajk-georg.drost@informatik.uni-halle.de>
-Description: A statistical framework to combine evolutionary information with transcriptome data to detect evolutionary signals and conserved stages in biological processes
-License: GPL-3
+Description: A statistical framework allowing users interested in the evolution of biological (developmental) processes to capture evolutionary signals in developmental transcriptomes.
 VignetteBuilder: knitr
 NeedsCompilation: yes
+License: GPL-3
 Depends: R (>= 3.1.1)
 Imports: Rcpp (>= 0.11.3), nortest (>= 1.0-2), fitdistrplus (>= 1.0-2),
         parallel (>= 3.1.1), foreach (>= 1.4.2), doParallel (>= 1.0.8),
         dplyr (>= 0.3.0)
-Suggests: knitr (>= 1.6), rmarkdown (>= 0.3.3), devtools (>= 1.6.1)
+Suggests: knitr (>= 1.6), rmarkdown (>= 0.3.3), devtools (>= 1.6.1),
+        testthat (>= 0.9.1)
 LinkingTo: Rcpp
 URL: https://github.com/HajkD/myTAI
-Packaged: 2014-12-27 20:05:01 UTC; Hajk
+BugReports: https://github.com/HajkD/myTAI/issues
+Packaged: 2015-05-24 08:44:21 UTC; h-gd
 Repository: CRAN
-Date/Publication: 2014-12-27 23:40:03
+Date/Publication: 2015-05-24 13:09:25
