--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,30 +2,41 @@
 
 export(CollapseReplicates)
 export(CombinatorialSignificance)
+export(DiffGenes)
 export(EarlyConservationTest)
-export(FilterRNASeqCT)
+export(EnrichmentTest)
+export(Expressed)
 export(FlatLineTest)
 export(MatchMap)
 export(PlotBarRE)
+export(PlotContribution)
 export(PlotCorrelation)
 export(PlotDistribution)
+export(PlotEnrichment)
+export(PlotGeneSet)
 export(PlotMeans)
 export(PlotPattern)
 export(PlotRE)
 export(RE)
 export(REMatrix)
 export(ReductiveHourglassTest)
+export(SelectGeneSet)
 export(TAI)
 export(TDI)
 export(age.apply)
 export(bar.colors)
 export(bootMatrix)
 export(ecScore)
+export(geom.mean)
+export(harm.mean)
 export(is.ExpressionSet)
 export(omitMatrix)
 export(pMatrix)
 export(pStrata)
+export(pTAI)
+export(pTDI)
 export(rhScore)
+export(taxonomy)
 export(tf)
 import(foreach)
 importFrom(Rcpp,sourceCpp)
