--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Expressed)
 export(FlatLineTest)
 export(MatchMap)
 export(PlotBarRE)
+export(PlotCategoryExpr)
 export(PlotContribution)
 export(PlotCorrelation)
 export(PlotDistribution)
@@ -17,6 +18,7 @@ export(PlotGeneSet)
 export(PlotMeans)
 export(PlotPattern)
 export(PlotRE)
+export(PlotReplicateQuality)
 export(RE)
 export(REMatrix)
 export(ReductiveHourglassTest)
