--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: myTAI
 Type: Package
 Title: Performing Phylotranscriptomics with R
-Version: 0.2.1
+Version: 0.3.0
 Date: 2015-07-22
 Author: Hajk-Georg Drost
 Maintainer: Hajk-Georg Drost <hajk-georg.drost@informatik.uni-halle.de>
@@ -14,12 +14,13 @@ Imports: Rcpp (>= 0.11.3), nortest (>= 1.0-2), fitdistrplus (>= 1.0-2),
         parallel (>= 3.1.1), foreach (>= 1.4.2), doParallel (>= 1.0.8),
         dplyr (>= 0.3.0), RColorBrewer (>= 1.1-2), taxize (>= 0.6.0),
         edgeR, methods (>= 3.1.1), graphics (>= 3.1.1), stats (>=
-        3.1.1), grDevices (>= 3.1.1), utils (>= 3.1.1)
+        3.1.1), grDevices (>= 3.1.1), utils (>= 3.1.1), reshape2 (>=
+        1.4.1), ggplot2 (>= 1.0.1)
 Suggests: knitr (>= 1.6), rmarkdown (>= 0.3.3), devtools (>= 1.6.1),
         testthat (>= 0.9.1)
 LinkingTo: Rcpp
 URL: https://github.com/HajkD/myTAI
 BugReports: https://github.com/HajkD/myTAI/issues
-Packaged: 2015-07-22 16:28:19 UTC; h-gd
+Packaged: 2015-07-30 15:49:26 UTC; h-gd
 Repository: CRAN
-Date/Publication: 2015-07-23 06:51:52
+Date/Publication: 2015-07-31 00:53:26
